[gd_scene load_steps=11 format=2]

[ext_resource path="res://Economy/Balance.tscn" type="PackedScene" id=1]
[ext_resource path="res://Economy/Shop.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/ShovelUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/GUI.gd" type="Script" id=5]
[ext_resource path="res://Shaders/blur.shader" type="Shader" id=6]
[ext_resource path="res://UI/ProgressBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://UI/MainMenu.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/amount = null

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -988, -276 )
mouse_filter = 2
script = ExtResource( 5 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 476.0
margin_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 10000, 10000 )
mouse_filter = 2

[node name="VBoxEconomy" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 70.0
margin_bottom = 34.0

[node name="Balance" parent="VBoxEconomy" instance=ExtResource( 1 )]

[node name="Shop" parent="VBoxEconomy" instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 70.0
margin_bottom = 34.0

[node name="Shovel" parent="." instance=ExtResource( 4 )]
margin_left = -60.0
margin_top = 5.0
margin_right = -5.0

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]
visible = false
mouse_filter = 2

[node name="ProgressBar" parent="." instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -378.0
margin_top = 9.0
margin_right = -264.0
margin_bottom = 28.0

[node name="MainMenu" parent="." instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.5
margin_top = 262.5
margin_right = 559.5
margin_bottom = 337.5
script = ExtResource( 8 )
