[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/PlayButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/ExitButton.png" type="Texture" id=3]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 616.0
margin_top = 336.0
margin_right = 664.0
margin_bottom = 384.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24 )

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 48.0
margin_bottom = 22.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Play"
icon = ExtResource( 1 )

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 48.0
margin_bottom = 48.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Exit"
icon = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
